23 merge from upstream ocm descriptor (#24)
* Resolve "OCM must ensure namespace exists"

* fixing telemetry annotations, improving manifestwork creation, namespace is...

* fixing telemetry annotations, improving manifestwork creation, namespace is...

* fixing telemetry annotations, improving manifestwork creation, namespace is...

* Add LICENSE

* Update README.md

* Update README.md

* fixing telemetry annotations, improving manifestwork creation, namespace is...

* Resolve "Annotations are not being added properly"

* Resolve "add Software Licensing"

* Resolve "Deployment Manager Unit Tests"

* Resolve "Improve readme.md and documentation"

* Resolve "Improve readme.md and documentation"

* Resolve "Deployment Manager CRUD"

* Fix routes

* fixing job manager URIs & resource sync parameters

* Resolve "Prepare code for beta release"

* Hotfix: update swagger API docs

* hotfix: job should only be promoted if it does not have an owner

* hotfix: creating a condition for deleted resources to inform the JM about successful deletion

* hotfix: gracePeriod reduced to zero when deleting resources; superfluous response fixed

* Revert "hotfix: job should only be promoted if it does not have an owner"

This reverts commit ae0e9111544e529b82444018939f95465fe50338

* hotfix: adding a resource condition when resource is deleted for validation purposes

* hotfix: adding missing values to the condition during delete operation

* Update middlewares.go

* hotfix: fix library import

* Resolve "Deployment Manager Job and Resource State Refactoring"

* Resolve "Refactor Deploy Manager"

* Resolve "add security remediation actions and fix reallocate"

* Resolve "Introduce development flag to not use JWT Middleware"

* Resolve "Adapt code to new Job Manager data model"

* Hotfix K8s job not cleaned after deployment

* Remove ICOS references

* Update licenes

---------
